Project 'drm/intel' was moved to 'drm/i915/kernel'. Please update any links and bookmarks that may still have the old path.
igt@core_hotunplug@hotrebind-lateclose - dmesg-fail - Failed assertion: igt_params_set(fd, "reset", "%d", 1 ), *ERROR* MMIO: GuC action 0x4506 failed with error -110 0x4506, *ERROR* CT: Failed to deregister SEND buffer (err=-110)
Starting subtest: hotrebind-lateclose
(core_hotunplug:1977) igt_aux-CRITICAL: Test assertion failure function igt_fork_hang_detector, file ../lib/igt_aux.c:517:
(core_hotunplug:1977) igt_aux-CRITICAL: Failed assertion: igt_params_set(fd, "reset", "%d", 1 )
(core_hotunplug:1977) igt_aux-CRITICAL: Last errno: 13, Permission denied
Subtest hotrebind-lateclose failed.
<7> [401.508346] [IGT] core_hotunplug: post closing health checked device instance
<7> [401.509355] i915 0000:00:02.0: [drm:intel_fbc_enable [i915]] reserved 16588800 bytes of contiguous stolen space for FBC, threshold: 1
<7> [401.509396] i915 0000:00:02.0: [drm:intel_fbc_enable [i915]] Enabling FBC on pipe A
<7> [401.517414] i915 0000:00:02.0: [drm:__intel_fbc_disable [i915]] Disabling FBC on pipe A
<7> [401.517774] [IGT] core_hotunplug: post unbinding the driver from the device
<7> [401.517886] i915 0000:00:02.0: [drm:intel_power_well_enable [i915]] enabling power well 2
<7> [401.517932] i915 0000:00:02.0: [drm:intel_power_well_enable [i915]] enabling power well 3
<7> [401.518000] i915 0000:00:02.0: [drm:intel_power_well_enable [i915]] enabling power well 4
<7> [401.518050] i915 0000:00:02.0: [drm:intel_power_well_enable [i915]] enabling power well 5
<6> [401.518897] Console: switching to colour dummy device 80x25
<7> [401.519132] intel_gt_set_wedged called from i915_driver_remove+0x55/0xf0 [i915]
<3> [401.529866] [drm:intel_guc_send_mmio [i915]] *ERROR* MMIO: GuC action 0x4506 failed with error -110 0x4506
<3> [401.529964] i915 0000:00:02.0: [drm:ct_deregister_buffer [i915]] *ERROR* CT: Failed to deregister SEND buffer (err=-110)
<3> [401.540798] [drm:intel_guc_send_mmio [i915]] *ERROR* MMIO: GuC action 0x4506 failed with error -110 0x4506
<3> [401.540869] i915 0000:00:02.0: [drm:ct_deregister_buffer [i915]] *ERROR* CT: Failed to deregister RECV buffer (err=-110)
<6> [401.540908] [drm] GuC communication disabled
<7> [401.621104] i915 0000:00:02.0: [drm:pipe_config_mismatch [i915]] [CRTC:91:pipe A] fastset mismatch in cpu_transcoder (expected 0, found -1)
<7> [401.621159] i915 0000:00:02.0: [drm:pipe_config_mismatch [i915]] [CRTC:91:pipe A] fastset mismatch in lane_count (expected 2, found 0)